// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ComparisonDiagram Snapshots matches snapshot for Poisoned Well example 1`] = `
<div
  class="max-w-3xl mx-auto "
>
  <div
    class="bg-parchment-light border-2 border-red-700/40 rounded-lg p-8 space-y-6"
  >
    <h4
      class="font-playfair text-2xl font-bold text-forest text-center mb-6"
    >
      The Poisoned Well: STEM Without Poetic Soil
    </h4>
    <p
      class="text-center text-base text-charcoal/70 italic mb-8"
    >
      Specialization must grow from poetic soil, not replace it
    </p>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-8"
    >
      <div
        class="flex flex-col space-y-4"
      >
        <div
          class="font-playfair text-lg font-bold text-center mb-4 text-red-900"
        >
          Modern Education
        </div>
        <div
          class="flex flex-col items-center space-y-2"
        >
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              📱Screens (0-13)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🛡️Gymnasium (skipped)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🎨Poetic (skipped)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🔬STEM-first
            </div>
          </div>
        </div>
        <div
          class="text-center font-bold text-lg mt-4 text-red-900"
        >
          = Alienated Technician
        </div>
      </div>
      <div
        class="flex flex-col space-y-4"
      >
        <div
          class="font-playfair text-lg font-bold text-center mb-4 text-green-900"
        >
          Classical Education
        </div>
        <div
          class="flex flex-col items-center space-y-2"
        >
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🌿Nursery (0-7)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🛡️Gymnasium (7-13)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🎨Poetic (13-17)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🔬Science (from soil)
            </div>
          </div>
        </div>
        <div
          class="text-center font-bold text-lg mt-4 text-green-900"
        >
          = Integrated Warrior Poet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ComparisonDiagram Snapshots matches snapshot without description 1`] = `
<div
  class="max-w-3xl mx-auto "
>
  <div
    class="bg-parchment-light border-2 border-red-700/40 rounded-lg p-8 space-y-6"
  >
    <h4
      class="font-playfair text-2xl font-bold text-forest text-center mb-6"
    >
      The Poisoned Well: STEM Without Poetic Soil
    </h4>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-8"
    >
      <div
        class="flex flex-col space-y-4"
      >
        <div
          class="font-playfair text-lg font-bold text-center mb-4 text-red-900"
        >
          Modern Education
        </div>
        <div
          class="flex flex-col items-center space-y-2"
        >
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              📱Screens (0-13)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🛡️Gymnasium (skipped)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🎨Poetic (skipped)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🔬STEM-first
            </div>
          </div>
        </div>
        <div
          class="text-center font-bold text-lg mt-4 text-red-900"
        >
          = Alienated Technician
        </div>
      </div>
      <div
        class="flex flex-col space-y-4"
      >
        <div
          class="font-playfair text-lg font-bold text-center mb-4 text-green-900"
        >
          Classical Education
        </div>
        <div
          class="flex flex-col items-center space-y-2"
        >
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🌿Nursery (0-7)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🛡️Gymnasium (7-13)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🎨Poetic (13-17)
            </div>
            <div
              class="text-center text-charcoal/40 my-1"
            >
              ↓
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="text-base text-charcoal/90 text-center"
            >
              🔬Science (from soil)
            </div>
          </div>
        </div>
        <div
          class="text-center font-bold text-lg mt-4 text-green-900"
        >
          = Integrated Warrior Poet
        </div>
      </div>
    </div>
  </div>
</div>
`;
